2008-12-06  Mamoru Tasaka  <mtasaka@ioa.s.u-tokyo.ac.jp>

	* configure.in: Build fix for libtool-2.2

2008-12-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-advrename-dialog.h:
	advrename: 'Profiles...' button for loading saved settings

	* src/gnome-cmd-xml-config.cc:
	* src/gnome-cmd-xml-config.cc:
	Added gnome_cmd_xml_config_parse() function

2008-11-29  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	Added AdvrenameConfig::fill_regex_model(Profile &)

2008-11-27  Piotr Eljasiak  <epiotr@use.pl>

	* po/POTFILES.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-xml-config.cc:
	* src/gnome-cmd-xml-config.h:
	Use XML cfg for storing advrename settings

2008-11-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-patternsel-dialog.cc:
	* src/gnome-cmd-search-dialog.cc:
	Do not allocate dynamically SearchConfig in GnomeCmdData

	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	* src/gnome-cmd-search-dialog.cc:
	* src/intviewer/search-dlg.cc:
	* src/intviewer/viewer-utils.cc:
	* src/intviewer/viewer-utils.h:
	Find file dlg: copy searched text phrase into intviewer text search dlg (F3-F3)

2008-11-24  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	Do not enable column searching for regex view

2008-11-23  Alan Pae  <alanpae@ilkda.com>

	* po/Makefile.in.in:
	* po/POTFILES.in:
	* po/POTFILES.skip:
	Add missing files to the relevant POTFILES file

2008-11-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-data.h:
	Do not allocate dynamically AdvrenameConfig in GnomeCmdData

	* src/gnome-cmd-advrename-dialog.cc:
	* src/history.h:
	Add History::front() and History::reverse() functions

2008-11-20  Piotr Eljasiak  <epiotr@use.pl>
